<resources>
    <string name="app_name">DataDiet</string>
    <string name="scanButton">scanButton</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="product">Product</string>
    <string name="result">Results</string>
    <string name="Login">Results</string>

    <string name="vegan"> Vegan</string>
    <string name="vegetarian"> Vegetarian</string>
    <string name="pescatarian"> Pescatarian</string>
    <string name="kosher"> Kosher</string>
    <string name="otherHint">Other</string>
    <string name="allergies">Allergies</string>
    <string name="allergyHint">List allergies separated by commas</string>

    <string name="labelTitle">Product Labels</string>
    <string name="ingredientsTitle">Ingredients</string>
    <string name="popUpTitle">Are you sure you want to clear history?</string>
    <string name="popUpMessage">You will not be able to get this information back.</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="ocr_back">Back</string>
</resources>
