<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food_background">

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="180dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="180dp"
        android:text="@string/settings"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/vegan_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/vegan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header" />

    <CheckBox
        android:id="@+id/vegetarian_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/vegetarian"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegan_checkbox" />

    <CheckBox
        android:id="@+id/pescatarian_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/pescatarian"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_checkbox" />

    <CheckBox
        android:id="@+id/allergies_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/allergies"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pescatarian_checkbox" />

    <EditText
        android:id="@+id/allergy_list"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint"
        android:inputType="textMultiLine"
        android:textColor="@color/settings"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allergies_checkbox" />

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="closeSettings" />

</android.support.constraint.ConstraintLayout>